Commit suggestions from PR review.
Co-authored-by: Ralf Handl <ralf.handl@sap.com>

--- a/versions/3.1.1.md
+++ b/versions/3.1.1.md
@@ -4083,7 +4083,7 @@ Two examples of this:
 
 ### OpenAPI Description Formats
 
-OpenAPI Descriptions use JSON, YAML, and JSON Schema, and therefore share their security considerations:
+OpenAPI Descriptions use a combination of JSON, YAML, and JSON Schema, and therefore share their security considerations:
 
 * [JSON](https://www.iana.org/assignments/media-types/application/json)
 * [YAML](https://www.iana.org/assignments/media-types/application/yaml)
