Apply suggestions from code review
Co-authored-by: Ralf Handl <ralf.handl@sap.com>
Co-authored-by: Kevin Swiber <kswiber@gmail.com>

--- a/versions/3.0.4.md
+++ b/versions/3.0.4.md
@@ -3729,8 +3729,10 @@ The name used for each property MUST correspond to a security scheme declared in
 A Security Requirement Object MAY refer to multiple security schemes in which case all schemes MUST be satisfied for a request to be authorized.
 This enables support for scenarios where multiple query parameters or HTTP headers are required to convey security information.
 
-When the security field is defined on the [OpenAPI Object](#openapi-object) or [Operation Object](#operation-object) and contains multiple Security Requirement Objects, only one of the entries in the list needs to be satisfied to authorize the request.
-This enables support for scenarios where the API supports alternative security schemes, or when they are optional.
+When the `security` field is defined on the [OpenAPI Object](#openapi-object) or [Operation Object](#operation-object) and contains multiple Security Requirement Objects, only one of the entries in the list needs to be satisfied to authorize the request.
+This enables support for scenarios where the API allows multiple, independent security schemes.
+
+An empty Security Requirement Object (`{}`) indicates anonymous access is supported.
 
 ##### Patterned Fields
 
