Add spec version 3.1 to schema landing pages

--- a/oas/3.1/meta/2024-11-10.md
+++ b/oas/3.1/meta/2024-11-10.md
@@ -1,5 +1,5 @@
 ---
-title: JSON Schema Vocabulary used in OpenAPI
+title: JSON Schema Vocabulary used in OpenAPI 3.1
 layout: default
 parent: Schemas
 ---
