Clarify usage of Schema Object in OpenAPI 3.0

--- a/versions/3.0.0.md
+++ b/versions/3.0.0.md
@@ -119,7 +119,7 @@ For example, if a field has an array value, the JSON array representation will b
 ```
 All field names in the specification are **case sensitive**.
 
-The schema exposes two types of fields: Fixed fields, which have a declared name, and Patterned fields, which declare a regex pattern for the field name.
+The schema defines two types of fields: fixed fields with explicitly declared names, and patterned fields that use regular expressions to match field names.
 
 Patterned fields MUST have unique names within the containing object.
 
